# twirlywhirly

./: .gitmodules  CMakeLists.txt  README.md
cmake/: DecoupleLoopsFront.cmake  LoopC14N.cmake  MemProfiler.cmake  Terrace.cmake  Utils.cmake
commutative_loops/: CMakeLists.txt  notes.org
commutative_loops/binary_search/: CMakeLists.txt
commutative_loops/cross_iteration_deps/: CMakeLists.txt  cross_iteration_deps.c
commutative_loops/cross_iteration_deps/analysis_example/: Makefile  cross_iteration_deps_analysis.c
commutative_loops/cross_iteration_deps_fake/: CMakeLists.txt  cross_iteration_deps_fake.c
commutative_loops/graph_traversal_update/: CMakeLists.txt
commutative_loops/linear_search/: CMakeLists.txt  linear_search.c
commutative_loops/list_traversal_update/: CMakeLists.txt
commutative_loops/map_mandelbrot/: CMakeLists.txt
commutative_loops/map_reduce_dot_product/: CMakeLists.txt
commutative_loops/map_saxpy/: CMakeLists.txt  map_saxpy.c
commutative_loops/map_simple/: CMakeLists.txt  map_simple.c
commutative_loops/matrix_product/: CMakeLists.txt
commutative_loops/negative/: CMakeLists.txt  cross_iteration_deps.c
commutative_loops/positive/: CMakeLists.txt  simple_map.c
commutative_loops/reduce_add/: CMakeLists.txt  reduce_add.c
commutative_loops/reduce_add/analysis_example/: .gitignore  Makefile  reduce_add_2.c  reduce_add_3.c  reduce_add_4.c  reduce_add_5.c  reduce_add_6.c  reduce_add_7.c
commutative_loops/reduce_concat/: CMakeLists.txt  reduce_concat.c
commutative_loops/reduce_histogram/: CMakeLists.txt
commutative_loops/reduce_tree_add/: CMakeLists.txt  reduce_tree_add
commutative_loops/scan_add/: CMakeLists.txt
commutative_loops/simple_map/: CMakeLists.txt  simple_map.c
commutative_loops/stencil_simple/: CMakeLists.txt
loop_exits/break_cond_loop/: break_cond_loop.c
loop_exits/continue_cond_loop/: continue_cond_loop.c
loop_exits/dead_loop/: dead_loop.c
loop_exits/exit_call_loop/: exit_call_loop.c
loop_exits/func_call_loop/: func_call_loop.c
loop_exits/indirect_exit_call_loop/: indirect_exit_call_loop.c
loop_exits/indirect_longjmp_call_loop/: indirect_longjmp_call_loop.c
loop_exits/infinite_loop/: infinite_loop.c
loop_exits/io_call_loop/: io_call_loop
loop_exits/regular_inner_loop/: regular_inner_loop.c
loop_exits/regular_loop/: regular_loop.c
loop_exits/return_stmt_inner_loop/: return_stmt_inner_loop.c
loop_exits/return_stmt_loop/: return_stmt_loop.c
loop_exits/return_stmt_with_val_loop/: return_stmt_loop_with_value.c
loop_exits/special_calls_loop/: special_calls_loop.c
samples/histogram/: .gitignore  Makefile  histogram-analysis.c  histogram.c
samples/nas_bt_rhs_norm/: nas_bt_rhs_norm.c
samples/nas_bt_rhs_norm/analysis_example/: .gitignore  Makefile  nas_bt_rhs_norm_analysis.c
samples/nas_bt_rhs_norm/llvmir/: nas_bt_rhs_norm.opt2-atrox.ll
samples/nas_is_bucket_size/: Makefile  common.h  nas_is_bucket_size.c  nas_is_bucket_size_libfuzzer.cc  nas_is_bucket_size_swap.c
samples/nas_sp_rhs_norm/: .gitignore  Makefile  nas_sp_rhs_norm.c
scripts/: cfgdotty.sh  exports.sh  loopsy.sh
utils/scripts/: cfgdotty.sh  exports.sh
utils/scripts/install_tree/: check_commutativity.sh  prepare_env.sh  prof.sh.in  run_commutativity.sh  test.sh.in
utils/scripts/misc/: produce_dot_cfg.sh
utils/scripts/source_tree/: build.sh  exports_clang_dep.sh
utils/stack_heap_printer/: CMakeLists.txt  stack_heap_printer.c
